languages/io-automaton-fe/src/test/resources/invalid/MultipleOutputsSamePort.ioautomaton
package invalid;

automaton MultipleOutputsSamePort {
    input int i;
    
    variable int v;
    
    output int o;
    output int x;
    output int y;
    
    state S;
    initial S;
    
    S [true] {v == 1} / {v=2, y=1, v=3, o = 3, o = 4, x = 1, x = 5};
}